--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 
 body {
+  max-width: 1140px;
+  margin: 0 auto;
   font-family: "Work Sans", sans-serif;
   width: 100%;
   min-height: 100vh;
@@ -76,4 +78,11 @@ body {
   opacity: 1;
   pointer-events: auto;
   transition: opacity 0.5s 0.5s ease;
+}
+
+@media screen and (max-width: 576px) {
+  body{
+    width: 90%;
+  }
+  
 }
